// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form exposes the expected functions from useForm hook 1`] = `
.emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4:focus:not(:disabled) {
  background-color: #FAFAFA;
  border-color: #3358CC;
}

.emotion-4:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-4:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  min-height: 12px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-6:disabled {
  color: #C0C0C0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 24px;
  height: 24px;
}

.emotion-14 svg {
  fill: #FFFFFF;
}

.emotion-14:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-14:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-14:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-14:disabled svg {
  fill: #C0C0C0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-17 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
  novalidate=""
>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <label
        class="emotion-2"
        for="mock-nk-1"
      >
        Email
      </label>
      <div
        class="emotion-3"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-4"
          data-testid="text-input-email"
          id="mock-nk-1"
          name="email"
          spellcheck="false"
          type="text"
          value="test"
        />
      </div>
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
          id="mock-nk-1-assistive-text"
        >
          Your email
        </p>
      </div>
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <label
        class="emotion-2"
        for="mock-nk-1"
      >
        Username
      </label>
      <div
        class="emotion-3"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-4"
          data-testid="text-input-username"
          id="mock-nk-1"
          name="username"
          spellcheck="false"
          type="text"
        />
      </div>
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
          id="mock-nk-1-assistive-text"
        >
          Your username
        </p>
      </div>
    </div>
  </div>
  <button
    class="emotion-14"
    data-testid="submit-button"
    type="submit"
  >
    <div
      class="emotion-15"
    >
      <div
        class="emotion-16"
      >
        <span
          class="emotion-17"
        >
          Submit
        </span>
      </div>
    </div>
  </button>
</form>
`;

exports[`Form renders with error and with submit validation and revalidation mode  1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #EF1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  caret-color: #D20600;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #D20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #D20600;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-20 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-20 svg {
  width: 24px;
  height: 24px;
}

.emotion-20 svg {
  fill: #FFFFFF;
}

.emotion-20:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-20:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-20:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-20:disabled svg {
  fill: #C0C0C0;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-23 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-23::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-23::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Required field
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-20"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-21"
      >
        <div
          class="emotion-22"
        >
          <span
            class="emotion-23"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with error on blur 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #EF1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  caret-color: #D20600;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #D20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #D20600;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-14::-webkit-input-placeholder {
  color: #535353;
}

.emotion-14::-moz-placeholder {
  color: #535353;
}

.emotion-14:-ms-input-placeholder {
  color: #535353;
}

.emotion-14::placeholder {
  color: #535353;
}

.emotion-14:focus:not(:disabled) {
  background-color: #FAFAFA;
  border-color: #3358CC;
}

.emotion-14:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-14:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-16 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-16:disabled {
  color: #C0C0C0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-17 svg {
  width: 24px;
  height: 24px;
}

.emotion-17 svg {
  fill: #FFFFFF;
}

.emotion-17:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-17:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-17:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-17:disabled svg {
  fill: #C0C0C0;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-20 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-20::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-20::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-14"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-8"
        >
          <p
            class="emotion-16"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-17"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-18"
      >
        <div
          class="emotion-19"
        >
          <span
            class="emotion-20"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with error on submit 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #EF1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  caret-color: #D20600;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #D20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #D20600;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-20 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-20 svg {
  width: 24px;
  height: 24px;
}

.emotion-20 svg {
  fill: #FFFFFF;
}

.emotion-20:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-20:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-20:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-20:disabled svg {
  fill: #C0C0C0;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-23 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-23::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-23::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Required field
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-20"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-21"
      >
        <div
          class="emotion-22"
        >
          <span
            class="emotion-23"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with error with 2 onBlur 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #EF1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  caret-color: #D20600;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #D20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #D20600;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-14::-webkit-input-placeholder {
  color: #535353;
}

.emotion-14::-moz-placeholder {
  color: #535353;
}

.emotion-14:-ms-input-placeholder {
  color: #535353;
}

.emotion-14::placeholder {
  color: #535353;
}

.emotion-14:focus:not(:disabled) {
  background-color: #FAFAFA;
  border-color: #3358CC;
}

.emotion-14:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-14:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-16 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-16:disabled {
  color: #C0C0C0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-17 svg {
  width: 24px;
  height: 24px;
}

.emotion-17 svg {
  fill: #FFFFFF;
}

.emotion-17:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-17:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-17:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-17:disabled svg {
  fill: #C0C0C0;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-20 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-20::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-20::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-14"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-8"
        >
          <p
            class="emotion-16"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-17"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-18"
      >
        <div
          class="emotion-19"
        >
          <span
            class="emotion-20"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with inputs 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-1:disabled {
  color: #C0C0C0;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-2 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-3 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-3::-webkit-input-placeholder {
  color: #535353;
}

.emotion-3::-moz-placeholder {
  color: #535353;
}

.emotion-3:-ms-input-placeholder {
  color: #535353;
}

.emotion-3::placeholder {
  color: #535353;
}

.emotion-3:focus:not(:disabled) {
  background-color: #FAFAFA;
  border-color: #3358CC;
}

.emotion-3:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-3:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-4 {
  min-height: 12px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-5:disabled {
  color: #C0C0C0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <label
        class="emotion-1"
        for="mock-nk-1"
      >
        Email
      </label>
      <div
        class="emotion-2"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-3"
          id="mock-nk-1"
          name="email"
          spellcheck="false"
          type="text"
        />
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
          id="mock-nk-1-assistive-text"
        >
          Your email
        </p>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <label
        class="emotion-1"
        for="mock-nk-1"
      >
        Username
      </label>
      <div
        class="emotion-2"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-3"
          id="mock-nk-1"
          name="username"
          spellcheck="false"
          type="text"
        />
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
          id="mock-nk-1-assistive-text"
        >
          Your username
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Form renders with native radio input without validation 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <input
      id="radio"
      type="radio"
      value="A"
    />
  </form>
</DocumentFragment>
`;

exports[`Form renders with nested inputs 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4:focus:not(:disabled) {
  background-color: #FAFAFA;
  border-color: #3358CC;
}

.emotion-4:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-4:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  min-height: 12px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-6:disabled {
  color: #C0C0C0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 24px;
  height: 24px;
}

.emotion-14 svg {
  fill: #FFFFFF;
}

.emotion-14:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-14:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-14:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-14:disabled svg {
  fill: #C0C0C0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-17 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-14"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-15"
      >
        <div
          class="emotion-16"
        >
          <span
            class="emotion-17"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with onBlur validation 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #C0C0C0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.43125em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.43125em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 12px;
  min-height: 48px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4:focus:not(:disabled) {
  background-color: #FAFAFA;
  border-color: #3358CC;
}

.emotion-4:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-4:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-5 {
  min-height: 12px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-6:disabled {
  color: #C0C0C0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 24px;
  height: 24px;
}

.emotion-14 svg {
  fill: #FFFFFF;
}

.emotion-14:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-14:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-14:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-14:disabled svg {
  fill: #C0C0C0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-17 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-14"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-15"
      >
        <div
          class="emotion-16"
        >
          <span
            class="emotion-17"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`FormInput fireEvent with onBlur valid state 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  min-height: 48px;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

.emotion-1:focus:not(:disabled) {
  border-color: #3358CC;
  background-color: #FAFAFA;
}

.emotion-1:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-1:valid:hover:not(:disabled) {
  border-color: #23A248;
  background-color: #FAFAFA;
}

.emotion-1:valid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-1:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-1:disabled svg {
  fill: #C0C0C0;
}

.emotion-1:invalid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-1:invalid:hover:not(:disabled) {
  border-color: #EF1703;
  background-color: #FAFAFA;
}

.emotion-2 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  padding: 12px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  min-height: 12px;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-7:disabled {
  color: #C0C0C0;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <label
      class="emotion-0"
      for="email"
    >
      E-mail
    </label>
    <div
      class="emotion-1"
    >
      <input
        aria-describedby="email-assistive-text"
        class="emotion-2"
        data-testid="text-field-email"
        id="email"
        name="email"
        type="text"
      />
      <span
        class="emotion-3"
      >
        <svg
          aria-hidden="true"
          class="emotion-4 emotion-5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="24"
            width="24"
          />
          <rect
            height="7"
            width="3"
            x="4"
            y="10"
          />
          <rect
            height="7"
            width="3"
            x="10.5"
            y="10"
          />
          <rect
            height="3"
            width="20"
            x="2"
            y="19"
          />
          <rect
            height="7"
            width="3"
            x="17"
            y="10"
          />
          <polygon
            points="12,1 2,6 2,8 22,8 22,6"
          />
        </svg>
      </span>
    </div>
    <div
      class="emotion-6"
    >
      <p
        class="emotion-7"
        id="email-assistive-text"
      >
        Assistive Text
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`FormInput fireEvent with onChange when value is invalid 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  min-height: 48px;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

.emotion-1:focus:not(:disabled) {
  border-color: #3358CC;
  background-color: #FAFAFA;
}

.emotion-1:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-1:valid:hover:not(:disabled) {
  border-color: #23A248;
  background-color: #FAFAFA;
}

.emotion-1:valid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-1:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-1:disabled svg {
  fill: #C0C0C0;
}

.emotion-1:invalid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-1:invalid:hover:not(:disabled) {
  border-color: #EF1703;
  background-color: #FAFAFA;
}

.emotion-2 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  padding: 12px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  min-height: 12px;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-7:disabled {
  color: #C0C0C0;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <label
      class="emotion-0"
      for="email"
    >
      E-mail
    </label>
    <div
      class="emotion-1"
    >
      <input
        aria-describedby="email-assistive-text"
        class="emotion-2"
        data-testid="text-field-email"
        id="email"
        name="email"
        type="text"
      />
      <span
        class="emotion-3"
      >
        <svg
          aria-hidden="true"
          class="emotion-4 emotion-5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="24"
            width="24"
          />
          <rect
            height="7"
            width="3"
            x="4"
            y="10"
          />
          <rect
            height="7"
            width="3"
            x="10.5"
            y="10"
          />
          <rect
            height="3"
            width="20"
            x="2"
            y="19"
          />
          <rect
            height="7"
            width="3"
            x="17"
            y="10"
          />
          <polygon
            points="12,1 2,6 2,8 22,8 22,6"
          />
        </svg>
      </span>
    </div>
    <div
      class="emotion-6"
    >
      <p
        class="emotion-7"
        id="email-assistive-text"
      >
        Assistive Text
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`FormInput renders FormInput Correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<label
    class="emotion-0"
    for="email"
  >
    E-mail
  </label>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  min-height: 48px;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

.emotion-0:focus:not(:disabled) {
  border-color: #3358CC;
  background-color: #FAFAFA;
}

.emotion-0:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #23A248;
  background-color: #FAFAFA;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-0:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-0:disabled svg {
  fill: #C0C0C0;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #EF1703;
  background-color: #FAFAFA;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  padding: 12px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

<div
    class="emotion-0"
  >
    <input
      aria-describedby="email-assistive-text"
      class="emotion-1"
      data-testid="text-field-email"
      id="email"
      name="email"
      type="text"
    />
    <span
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="24"
          width="24"
        />
        <rect
          height="7"
          width="3"
          x="4"
          y="10"
        />
        <rect
          height="7"
          width="3"
          x="10.5"
          y="10"
        />
        <rect
          height="3"
          width="20"
          x="2"
          y="19"
        />
        <rect
          height="7"
          width="3"
          x="17"
          y="10"
        />
        <polygon
          points="12,1 2,6 2,8 22,8 22,6"
        />
      </svg>
    </span>
  </div>
  .emotion-0 {
  min-height: 12px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1:disabled {
  color: #C0C0C0;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
      id="email-assistive-text"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`FormInput renders with error and with submit validation and revalidation mode  1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  min-height: 48px;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

.emotion-1:focus:not(:disabled) {
  border-color: #3358CC;
  background-color: #FAFAFA;
}

.emotion-1:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-1:valid:hover:not(:disabled) {
  border-color: #23A248;
  background-color: #FAFAFA;
}

.emotion-1:valid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-1:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-1:disabled svg {
  fill: #C0C0C0;
}

.emotion-1:invalid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-1:invalid:hover:not(:disabled) {
  border-color: #EF1703;
  background-color: #FAFAFA;
}

.emotion-2 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  padding: 12px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  min-height: 12px;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-7:disabled {
  color: #C0C0C0;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-13 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-13 svg {
  width: 24px;
  height: 24px;
}

.emotion-13 svg {
  fill: #FFFFFF;
}

.emotion-13:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-13:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-13:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-13:disabled svg {
  fill: #C0C0C0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-16 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<form
    novalidate=""
  >
    <label
      class="emotion-0"
      for="mock-nk-1"
    >
      E-mail
    </label>
    <div
      class="emotion-1"
    >
      <input
        aria-describedby="mock-nk-1-assistive-text"
        class="emotion-2"
        data-testid="text-field-email"
        id="mock-nk-1"
        name="email"
        type="text"
      />
      <span
        class="emotion-3"
      >
        <svg
          aria-hidden="true"
          class="emotion-4 emotion-5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="24"
            width="24"
          />
          <rect
            height="7"
            width="3"
            x="4"
            y="10"
          />
          <rect
            height="7"
            width="3"
            x="10.5"
            y="10"
          />
          <rect
            height="3"
            width="20"
            x="2"
            y="19"
          />
          <rect
            height="7"
            width="3"
            x="17"
            y="10"
          />
          <polygon
            points="12,1 2,6 2,8 22,8 22,6"
          />
        </svg>
      </span>
    </div>
    <div
      class="emotion-6"
    >
      <p
        class="emotion-7"
        id="mock-nk-1-assistive-text"
      >
        Assistive Text
      </p>
    </div>
    <label
      class="emotion-0"
      for="mock-nk-1"
    >
      Username
    </label>
    <div
      class="emotion-1"
    >
      <input
        aria-describedby="mock-nk-1-assistive-text"
        class="emotion-2"
        data-testid="text-field-username"
        id="mock-nk-1"
        name="username"
        type="text"
      />
    </div>
    <div
      class="emotion-6"
    >
      <p
        class="emotion-7"
        id="mock-nk-1-assistive-text"
      >
        Assistive Text
      </p>
    </div>
    <button
      class="emotion-13"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-14"
      >
        <div
          class="emotion-15"
        >
          <span
            class="emotion-16"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`FormInput renders with nested inputs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<label
    class="emotion-0"
    for="mock-nk-1"
  >
    E-mail
  </label>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  min-height: 48px;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

.emotion-0:focus:not(:disabled) {
  border-color: #3358CC;
  background-color: #FAFAFA;
}

.emotion-0:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #23A248;
  background-color: #FAFAFA;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-0:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-0:disabled svg {
  fill: #C0C0C0;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #EF1703;
  background-color: #FAFAFA;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  padding: 12px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

<div
    class="emotion-0"
  >
    <input
      aria-describedby="mock-nk-1-assistive-text"
      class="emotion-1"
      data-testid="text-field-email"
      id="mock-nk-1"
      name="email"
      type="text"
    />
    <span
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="24"
          width="24"
        />
        <rect
          height="7"
          width="3"
          x="4"
          y="10"
        />
        <rect
          height="7"
          width="3"
          x="10.5"
          y="10"
        />
        <rect
          height="3"
          width="20"
          x="2"
          y="19"
        />
        <rect
          height="7"
          width="3"
          x="17"
          y="10"
        />
        <polygon
          points="12,1 2,6 2,8 22,8 22,6"
        />
      </svg>
    </span>
  </div>
  .emotion-0 {
  min-height: 12px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1:disabled {
  color: #C0C0C0;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
      id="mock-nk-1-assistive-text"
    >
      Assistive Text
    </p>
  </div>
  .emotion-0 {
  display: block;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-0:disabled {
  color: #C0C0C0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<label
    class="emotion-0"
    for="mock-nk-1"
  >
    Username
  </label>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 8px;
  color: #2E2E2E;
  text-overflow: ellipsis;
  min-height: 48px;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

.emotion-0:focus:not(:disabled) {
  border-color: #3358CC;
  background-color: #FAFAFA;
}

.emotion-0:hover:not(:disabled) {
  background-color: #FAFAFA;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #23A248;
  background-color: #FAFAFA;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-0:disabled {
  border-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-0:disabled svg {
  fill: #C0C0C0;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #FAFAFA;
  background-color: #FAFAFA;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #EF1703;
  background-color: #FAFAFA;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  padding: 12px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<div
    class="emotion-0"
  >
    <input
      aria-describedby="mock-nk-1-assistive-text"
      class="emotion-1"
      data-testid="text-field-username"
      id="mock-nk-1"
      name="username"
      type="text"
    />
  </div>
  .emotion-0 {
  min-height: 12px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1:disabled {
  color: #C0C0C0;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
      id="mock-nk-1-assistive-text"
    >
      Assistive Text
    </p>
  </div>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-0:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-0:disabled svg {
  fill: #C0C0C0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: -0.5px;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<button
    class="emotion-0"
    data-testid="submit-button"
    type="submit"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Submit
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;
